fix bower package name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "va-oauth",
+  "name": "va-auth",
   "version": "0.0.1",
   "description": "Useful web component for user authentication with Firebase.",
   "license": "MIT",
